--- a/locationTrack.html
+++ b/locationTrack.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Driver Location Sharing</title>
+  <title>Test Driver Location Sharing</title>
   <script>
     function getLocation() {
       if (navigator.geolocation) {
