--- a/locationTrack.html
+++ b/locationTrack.html
@@ -46,7 +46,7 @@
 
     function sendLocationToServer(lat, lng) {
       // Use Google Apps Script web app URL or backend server URL
-      var url = "https://your-google-apps-script-url-or-server.com";
+      var url = "https://script.google.com/macros/s/AKfycbx9t0-wWMWqONJUsBoAdLHA5OPnUDHSKEu5RXxUV6-qb4b7BllIPpjHX1GUKnlenfhy/exec";
       var data = {
         latitude: lat,
         longitude: lng
